force-app/main/default/objects/SalesAgreementProductSchedule/fields/PMC_SS_AnnualTons__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AnnualTons__c</fullName>
    <description>States the Annual Tons for the Specific Schedule</description>
    <label>Annual Tons</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>