force-app/main/default/objects/SalesAgreementProductSchedule/fields/PMC_SS_BinSpaceTons__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_BinSpaceTons__c</fullName>
    <description>States the Bin Space Tons for the Specific Schedule</description>
    <label>Bin Space Tons</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>