force-app/main/default/objects/SalesAgreementProductSchedule/fields/PMC_SS_Target__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Target__c</fullName>
    <description>State the Target for a specific schedule</description>
    <label>Target</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>