force-app/main/default/objects/SalesAgreementProductSchedule/validationRules/PMC_SS_RestrictSAProductSchedules.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictSAProductSchedules</fullName>
    <active>true</active>
    <description>To restrict the updates on planned values of Sales Agreement Product Schedule when Sales Agreement is not in Draft status</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$User.LastName &lt;&gt; &apos;Platform Integration User&apos;,
NOT(
ISPICKVAL(SalesAgreementProduct.SalesAgreement.Status , &quot;Draft&quot;))
)</errorConditionFormula>
    <errorMessage>Sales Agreement Product Schedules cannot be added or updated at this stage. Please Amend this Sales Agreement</errorMessage>
</ValidationRule>